--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "graphql-yoga": "^1.18.3",
     "merge-graphql-schemas": "^1.7.5",
     "morgan": "^1.9.1",
+    "nodemailer": "^6.12.1",
+    "nodemailer-mailgun-transport": "^2.0.0",
     "prisma-client-lib": "^1.34.10"
   },
   "scripts": {
