--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "morgan": "^1.9.1",
     "nodemailer": "^6.12.1",
     "nodemailer-mailgun-transport": "^2.0.0",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "prisma-client-lib": "^1.34.10"
   },
   "scripts": {
