--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^8.2.0",
     "graphql-tools": "^4.0.6",
     "graphql-yoga": "^1.18.3",
+    "jsonwebtoken": "^6.12.1",
     "merge-graphql-schemas": "^1.7.5",
     "morgan": "^1.9.1",
     "nodemailer": "^6.12.1",
